--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,6 +29,7 @@ h2, h3 {
 }
 
 p {
+    font-family: 'Calibri', Times, serif;
     padding-left: 10%;
     padding-right: 10%;
     font-size: 20px;
