--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,7 +51,8 @@ iframe {
 /*Images*/
 .back-img {
     height: auto;
-    background-image: url(../Images/Black\ and\ Grey\ Gradient.png);
+    background-image: url(../Images/Sunset\ \(2880x1620\).jpg);
+    opacity: 5%;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -62,18 +63,18 @@ iframe {
 nav {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     overflow: hidden;
-    background-color: #1b1b1a;
-    padding: 5px 5px; 
+    background: linear-gradient(to top right, #000000 0%, #444444 100%);
+    padding: 40px 40px; 
     padding-left: 100px;
     top: 0;
 }
 
 nav a {
     color: white;
-    display: inline-block;
+    float: right;
     text-align: center;
     padding: 12px;
-    margin-top: 3px;
+    margin-top: 40px;
     text-decoration: none;
     font-size: 18px;
     line-height: 10px;
@@ -87,10 +88,28 @@ nav a.currentPage {
     color: #998b0a;
 }
 
+nav .socials {
+    max-width: 70px;
+    float: none;
+    position: absolute;
+    right: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .navLogo {
-    max-width: 40px;
+    max-width: 100px;
     display: inline-block;
-    vertical-align: top;
+    position: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.navName {
+    max-width: 400px;
+    padding-top: 10px;
+    display: inline-block;
+    position: center;
     margin-left: auto;
     margin-right: auto;
 }
