--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,8 +51,9 @@ iframe {
 /*Images*/
 .back-img {
     height: auto;
-    background-image: url(../Images/Sunset\ \(2880x1620\).jpg);
-    opacity: 5%;
+    background-image: url(../Images/Background.png);
+    background-blend-mode: soft-light;
+    opacity: 10%;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
