--- a/CSS/style.css
+++ b/CSS/style.css
@@ -254,6 +254,15 @@ footer h2 {
     margin-right: auto;
 }
 
+@media only screen and (max-width: 850px) {
+    .footerLogo {
+        max-width: 50%;
+    }
+    .footerText {
+        max-width: 100%;
+    }
+}
+
 /*Resizing*/
 @media only screen and (max-width: 1200px) {
     footer a {
