--- a/CSS/style.css
+++ b/CSS/style.css
@@ -132,7 +132,6 @@ nav a.currentPage {
 .navLogo {
     max-width: 15%;
     display: inline-block;
-    position: center;
     margin-left: auto;
     margin-right: auto;
     padding-left: 13%;
@@ -140,7 +139,7 @@ nav a.currentPage {
 
 .navName {
     max-width: 55%;
-    padding-top: 10px;
+    padding-bottom: 13px;
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
